# guitarian

audio_engine/: .env  Cargo.toml
audio_engine/src/: jack_client.rs  main.rs  plugin_manager.rs
audio_engine/src/jack_client/: audio_plugins.rs  audio_processor.rs  client.rs  notification_handler.rs  plugin_manager.rs
audio_engine/src/plugin_manager/: audio_plugins.rs  manager.rs
backend/: .env.example  Cargo.toml
backend/audio_engine/: .env.example  Cargo.toml
backend/audio_engine/src/: main.rs  message_handler.rs  plugin_manager.rs
backend/audio_engine/src/jack_client/: audio_processor.rs  client.rs  engine_settings.rs  mod.rs  notification_handler.rs  types.rs  utils.rs
backend/audio_engine/src/message_handler/: message_handler.rs  message_handler_controller.rs  mod.rs  utils.rs
backend/audio_engine/src/plugin_manager/: audio_plugins.rs  chain_saver.rs  manager.rs  mod.rs  plugin_chain.rs  plugin_instance.rs  plugin_repository.rs  types.rs  utils.rs
backend/audio_engine/src/utils/: mod.rs  ports.rs  vector.rs
backend/server/: Cargo.toml
backend/server/src/: context.rs  main.rs
backend/server/src/api/: chain.rs  config.rs  mod.rs  plugins.rs  ports.rs  presets.rs
backend/server/src/core/: chain.rs  chain_ws.rs  config.rs  mod.rs  plugins.rs  ports.rs  presets.rs
backend/server/src/engine_client/: commands.rs  engine_clinet.rs  engine_subscriber.rs  mod.rs  utils.rs
backend/server/src/models/dto/: chain.rs  config.rs  mod.rs  plugins.rs  ports.rs  presets.rs
backend/server/src/models/entities/: preset.rs
backend/server/src/utils/: db.rs
backend/shared/: Cargo.toml
backend/shared/src/: commands.rs  data.rs  utils.rs
backend/shared/src/utils/: app_data.rs  mod.rs  path.rs  plugin.rs
frontend/: .env.example  .gitignore  app.config.ts  eslint.config.js  index.ts  package.json  unistyles.ts
frontend/patches/: @expo%2Fui@56.0.18.patch
frontend/src/api/chain/: chain.keys.ts  chain.mutations.ts  chain.queries.ts  index.ts  types.ts  utils.ts
frontend/src/api/config/: config.keys.ts  config.mutations.ts  config.queries.ts  index.ts  types.ts
frontend/src/api/plugins/: index.ts  plugins.keys.ts  plugins.mutations.ts  plugins.queries.ts  types.ts
frontend/src/api/ports/: index.ts  ports.keys.ts  ports.mutations.ts  ports.queries.ts  types.ts
frontend/src/api/presets/: index.ts  presets.keys.ts  presets.mutation.ts  presets.queries.ts  types.ts
frontend/src/app/: _layout.tsx  index.tsx
frontend/src/contexts/: AppProvider.tsx  ConfirmationProvider.tsx  ConnectionProvider.tsx  WebSocketProvider.tsx
frontend/src/stores/: chain.ts  config.ts  connection.ts  preset.ts
frontend/src/types/: plugins.ts
frontend/src/ui/: typography.ts
frontend/src/utils/: chain.ts  haptics.ts  ref.ts  regex.ts  text.ts  url.ts  useAppStateChange.ts
thesis/: bibliography.bib  main.tex
(+93 files in other folders)
