[workspace]
members = [
    "audio_engine",
    "server",
    "shared",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
zeromq = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bincode = { version = "2.0.1", features = ["derive"] }
dotenvy = "0.15.7"

[patch.crates-io]
lilv = { git = "https://github.com/wmedrano/lilv-rs" }
