[package]
name = "audio_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
jack = "0.13"
livi = { git = "https://github.com/Shintenza/livi-rs" }
ringbuf = "0.4.8"
ctrlc = "3.5"
log = "0.4.29"
env_logger = "0.11.10"
atomic_float = "1.1.0"
heck = "0.5.0"

tokio = { workspace = true }
tokio-util = { workspace = true }
zeromq = { workspace = true }
bincode = { workspace = true }
dotenvy = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

shared = { path = "../shared" }
