[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = { workspace = true }
serde_json = "1.0.150"

tokio = { workspace = true }
zeromq = { workspace = true }
dotenvy = { workspace = true }
bincode = { workspace = true }

shared = { path = "../shared" }
