[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
axum = { version = "0.8.9", features = ["ws"] }
serde = { workspace = true }
serde_json = "1.0.150"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }

tokio = { workspace = true }
zeromq = { workspace = true }
dotenvy = { workspace = true }
bincode = { workspace = true }

shared = { path = "../shared" }
